# ZTManager-Qt

./: .gitignore  pyproject.toml
ztmanager/: __init__.py  installer.py  main.py  preferences.py  window.py  zerotierlib.py
