[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ztmanager-qt"
version = "0.1.0"
description = "ZeroTier Manager — Qt6/KDE GUI"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "requests>=2.28.0",
    "urllib3>=2.0.0",
]

[project.scripts]
ztmanager-qt = "ztmanager.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ztmanager"]
